# latex-pdf-translator

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  server.py
docs/: index.html
translator/: charmap.py  extract.py  render.py  translate.py
