[project]
name = "latex-pdf-translator"
version = "0.1.0"
description = "Translate math LaTeX PDFs between any languages while preserving mathematical notation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.27.1",
    "deep-translator>=1.11.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
]
